--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,9 @@
 language: node_js
 node_js:
-    - "10"
+  - "10"
+before_install:
+  - npm install discord.js
+install:
+    - npm install
+script:
+  - npm test
